--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "indo.rubik",
+  "name": "rubik-main",
   "version": "1.0.0",
-  "description": "Main Rubik",
+  "description": "Main Rubik for your app",
   "main": "index.js",
   "scripts": {
     "test": "jest"
