--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "rubik-main",
-  "version": "1.5.2",
+  "version": "2.0.0",
   "description": "Main Rubik for your app",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -19,9 +20,10 @@
   "devDependencies": {
     "babel-eslint": "^8.2.1",
     "eslint": "^4.15.0",
-    "jest": "^22.0.6"
+    "jest": "^23.1.0"
   },
   "dependencies": {
+    "hooks-mixin": "^1.2.0",
     "lodash": "^4.17.4"
   }
 }
