--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "rubik-main",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "description": "Main Rubik for your app",
   "main": "index.js",
+  "files": [
+    "index.js",
+    "lib/",
+    "!**/*.test.js"
+  ],
   "scripts": {
     "test": "jest",
-    "watch": "jest --watch"
+    "watch": "jest --watch",
+    "lint": "eslint ./",
+    "tarball": "tarball=\"$(npm pack .)\"; wc -c \"${tarball}\"; tar tvf \"${tarball}\"; rm \"${tarball}\";",
+    "prepublishOnly": "yarn tarball"
   },
   "repository": {
     "type": "git",
@@ -18,12 +26,11 @@
   },
   "homepage": "https://github.com/ya-kostik/Rubik#readme",
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "jest": "^25.2.7"
+    "eslint": "^7.27.0",
+    "jest": "^27.0.3"
   },
   "dependencies": {
-    "hooks-mixin": "^1.2.2",
-    "lodash": "^4.17.15"
+    "hooks-mixin": "^1.3.0",
+    "lodash": "^4.17.21"
   }
 }
